--- a/FirstWebApp/FirstWebApp.csproj
+++ b/FirstWebApp/FirstWebApp.csproj
@@ -179,6 +179,7 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\Repository.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
